--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio2</title>
-    <link rel="stylesheet" href="../css/portfolio2.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="wholediv">
         <video autoplay loop muted class="video">
-            <source src="../Images/WhatsApp Video 2024-07-15 at 11.26.24 AM.mp4">
+            <source src="WhatsApp Video 2024-07-15 at 11.26.24 AM.mp4">
         </video>
         <div class="navbar">
             <ul>
