--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#a4"><li>Contact</li></a>
                 
             </ul>
-            <img src="../Images/v-removebg-preview.png" alt="">
+            <img src="v-removebg-preview.png" alt="">
 
         </div>
         <div class="name" id="a1">
