--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wholediv">
         <video autoplay loop muted class="video">
-            <source src="video.mp4">
+            <source src="video1.mp4">
         </video>
         <div class="navbar">
             <ul>
